# fluid_sim

./: Cargo.toml  README.md
src/: best.rs  main.rs
trash/: fast.rs  main2.rs  main3.rs  thing.rs
